Browser_IDE/stylesheet.css
/* ... */
.modal-header .btn-close {
  padding: calc(var(--bs-modal-header-padding-y) * 0.5) calc(var(--bs-modal-header-padding-x) * 0.5);
  margin: calc(-0.5 * var(--bs-modal-header-padding-y)) calc(-0.5 * var(--bs-modal-header-padding-x)) calc(-0.5 * var(--bs-modal-header-padding-y)) auto;
}

.modal-title {
  margin-bottom: 0;
  line-height: var(--bs-modal-title-line-height);
}

.modal-body {
  position: relative;
  flex: 1 1 auto;
  padding: var(--bs-modal-padding);
}

.loading-container {
  display: flex;
  opacity: 0; /* hide by default */
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 1000;
  flex-direction: column;
  pointer-events: none;
  transition: opacity 0.5s ease;
}

.loading-bar {
  width: 50%;
  background-color: #444;
  border-radius: 25px;
  overflow: hidden;
}

.loading-progress {
  width: 0;
  height: 1.4em;
  background-color: #24262d;
}

.loading-text {
  position: absolute; 
  top: 50%; 
  left: 50%; 
  transform: translate(-50%, -50%);
  color: white;
}

/* Modal UI changes */

.modal .sk-header {
  padding: 1.5em 1em; 
  display: flex; 
  align-items: center; 
}

.modal .sk-modal-footer {
  padding: 1.3em 1em; 
  display: flex; 
  align-items: center; 
  justify-content: flex-end; 
}

.btn {
  transition: background-color 0.3s, box-shadow 0.3s;
  box-shadow: 3px 3px 6px rgba(0,0,0,0.2);
  line-height: 1em;
  padding: 0.5em 1em;
}

.btn:last-child {
  margin-right: 0;
}


.btn-secondary {
  color: white; 
}

.btn-success {
  color: #54ff3b;
}

.btn-success:hover, .btn-success:focus {
  background-color: #2d332f;
}

.flex-column {
    display: flex;
}

/* Canvas scaling fix */

#canvas {
  max-height: 100% !important;
  max-width: 100% !important;
  height: auto !important;
  width: auto !important;
}

.sk-term-fmt-code1 {font-weight: bold;}
.sk-term-fmt-code3 {font-style: italic;}
.sk-term-fmt-code4 {text-decoration: underline;}
.sk-term-fmt-code9 {text-decoration: line-through;}
.sk-term-fmt-code21, .sk-term-fmt-code22 {font-weight: normal;}
.sk-term-fmt-code23 {font-style: normal;}
.sk-term-fmt-code24, .sk-term-fmt-code29 {text-decoration: none;}

.sk-term-fmt-code30, .sk-term-fmt-code90 {color: black;}
.sk-term-fmt-code31, .sk-term-fmt-code91 {color: red;}
.sk-term-fmt-code32, .sk-term-fmt-code92 {color: lime;}
.sk-term-fmt-code33, .sk-term-fmt-code93 {color: yellow;}
.sk-term-fmt-code34, .sk-term-fmt-code94 {color: blue;}
.sk-term-fmt-code35, .sk-term-fmt-code95 {color: magenta;}
.sk-term-fmt-code36, .sk-term-fmt-code96 {color: cyan;}
.sk-term-fmt-code37, .sk-term-fmt-code97 {color: white;}

.sk-collapsed-column {
  box-shadow: 0 1px 0 0.4px #404040 inset;
  display: flex;
  flex-direction: column;
}

.sk-collapsed-column button {
  font-size: 1.1em;
  padding: 0.5em;
}

.sk-hidden {
  display: none !important;
}

.sk-header-title {
  text-wrap: nowrap;
}

.sk-minified .directory-contents {
  padding-left: 15px;
}

/* Run program button icons - join the gear and play icons together */
.run-program .bi-gear-fill {
  position: absolute;
  font-size: 0.5em;
  margin-left: -0.1em;
  margin-top: 0.64em;
  opacity: 0.5;
}


/* embedded view */

.sk-embedded>.sk-header {
  display:none;
}
.sk-embedded .sk-column {
  height: initial;
  width: 100%;
}
.sk-embedded .sk-main-columns {
  flex-direction: column; /*vertical view*/
}
.sk-embedded #fileViewContainer {
  display:none;
}
.sk-embedded #codeViewContainer{
  flex-grow: 0;
  min-height: 0;
}
.sk-embedded #codeViewContainer .sk-header{
  display:none;
}
.sk-embedded .sk-contents{
  height: initial;
}
.sk-embedded #codeViewContainer .CodeMirror-scroll{
  height: initial;
}

.sk-embedded #runtimeContainer{
  flex-grow: 1;
  min-height: 200px;
}
.sk-embedded .collapse-button{
  display:none
}

#terminalOutputContainer{
  flex-grow: 0;
}
.sk-embedded #terminalOutputContainer{
  flex-grow: 1;
}
.sk-embedded #terminalOutputContainer .sk-header{
  display:none;
}

.sk-embedded .sk-notification {
  width: 15em;
  padding: 0.1em;
}
.sk-embedded .sk-notification-body {
  margin: 2px 0.5em 2px 0.5em;
}

.sk-embedded .embedded-hide{
  display: none;
}

.active-mini-tab {
  color: #9fff69;
}

